# btrc

./: .gitignore  CLAUDE.md  Makefile  README.md  btrc.py  flake.nix  pyproject.toml
.devcontainer/: Containerfile  container.sh  devcontainer.json  flake.nix  host.sh  project.json
.github/workflows/: ci.yml
benchmarks/: fib.btrc  list_sort.btrc  map_insert.btrc  run.sh
compiler/btrc/: btrc_compiler.btrc  char_buffer.btrc  console.btrc  keywords.btrc  lexer.btrc  token.btrc  token_types.btrc
compiler/python/: __init__.py  analyzer.py  ast_nodes.py  codegen.py  lexer.py  parser.py  tokens.py
devex/ext/: language-configuration.json  package-lock.json  package.json
devex/lsp/: completion.py  definition.py  diagnostics.py  hover.py  references.py  semantic_tokens.py  server.py  signature_help.py  symbols.py
examples/: Makefile  animals.btrc  calculator.btrc  classes.btrc  collections.btrc  error_handling.btrc  hello.btrc  linked_list.btrc  shapes.btrc  sorting.btrc  stdlib_demo.btrc  string_processing.btrc  todo_app.btrc
examples/game/: Makefile  game.btrc
examples/gpu/: Makefile  triangle  triangle.btrc  triangle.c
examples/sgd/: .gitignore  Makefile  sgd.btrc
examples/todo/: .gitignore  Makefile  todo.btrc
examples/triangle/: Makefile  triangle.btrc
runtime/: btrc_map.h
scripts/: compare_lexers.py
spec/: ast.asdl  grammar.ebnf
spec/ast/: asdl_btrc.py  asdl_python.py  ast.asdl  gen_builtins.py
src/language/: grammar.ebnf
src/stdlib/: array.btrc  btrc_array.h  btrc_list.h  btrc_runtime.h  collections.btrc  console.btrc  datetime.btrc  error.btrc  io.btrc  iterable.btrc  list.btrc  map.btrc  math.btrc  random.btrc  result.btrc  set.btrc  strings.btrc  vector.btrc
src/tests/: generate_expected.py  runner.py  test_arc_basic.c  test_arc_stress.c  test_auto_release.btrc  test_auto_release.c  test_btrc_runner.py  test_class_collections.btrc  test_class_dot_syntax.btrc  test_classes.btrc  test_collection_ops.btrc  test_collections.btrc  test_compound_assign.btrc  test_comprehensive.btrc  test_control_flow.btrc  test_destructor.btrc  test_do_while.btrc  test_enum_tostring.btrc  test_forin_control.btrc  test_forward_decl.btrc  test_fstring_advanced.btrc  test_generic_magic.btrc  test_hello.btrc  test_include.btrc  test_indexof_float.btrc  test_inheritance.btrc  test_keep_fields.btrc  test_keep_fields.c  test_keep_params.c  test_lambda_globals.btrc  test_list_advanced.btrc  test_list_bounds.btrc  test_list_edge_cases.btrc  test_list_findIndex.btrc  test_list_functional.btrc  test_list_pop.btrc  test_list_reversed.btrc  test_list_take_drop.btrc  test_map_iteration.btrc  test_map_methods.btrc  (+25 more)
stdlib/: math.btrc  random.btrc  strings.btrc
tests/btrc/: test_btrc_runner.py  test_default_params.btrc  test_destructor.btrc  test_list_methods.btrc  test_operator_overload.btrc
tools/: asdl_btrc.py  asdl_python.py  gen_builtins.py
(+796 files in other folders)
