[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "btrc"
version = "0.1.0"
description = "A language that transpiles to C"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.1.0"]

[project.scripts]
btrcpy = "src.compiler.python.main:main"

[tool.pytest.ini_options]
testpaths = ["src/compiler/python/tests", "src/tests"]
pythonpath = ["."]

[tool.ruff]
src = ["src"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W"]
