[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "btrc"
version = "0.1.0"
description = "A language that transpiles to C"
requires-python = ">=3.13"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-xdist>=3.0", "ruff>=0.1.0"]

[project.scripts]
btrcpy = "src.compiler.python.main:main"

[tool.pytest.ini_options]
testpaths = ["src/compiler/python/tests", "src/tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = [
    "E501",
    "E701",
    "SIM108",
    "UP015",
    "B905",
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.pyright]
extraPaths = ["."]
pythonVersion = "3.13"
